deploy/middleware-analytics-auth.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: analytics-auth
  namespace: solitaire
spec:
  basicAuth:
    secret: analytics-auth-secret
