deploy/matomo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matomo
  namespace: solitaire
spec:
  selector:
    app: matomo
  ports:
    - name: http
      port: 80
      targetPort: 80
