deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solitaire-server
  namespace: solitaire
spec:
  selector:
    app: solitaire-server
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: analytics
      port: 8001
      targetPort: 8001
