deploy/ingress-analytics.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solitaire-analytics
  namespace: solitaire
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: solitaire-analytics-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: analytics.aleshym.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: solitaire-server
                port:
                  name: analytics
  tls:
    - hosts:
        - analytics.aleshym.co
      secretName: analytics-tls
